Fix alignment of sidebar buttons

--- a/src/assets/sass/layout/_sidebar.scss
+++ b/src/assets/sass/layout/_sidebar.scss
@@ -1,6 +1,5 @@
 .sidebar-button {
   display: flex;
-  justify-content: center;
   color: white;
   padding: 5px 0 5px 0;
   white-space: nowrap;
@@ -15,4 +14,9 @@
   &:hover:not(.disabled) {
     background: $color-primary-light;
   }
+
+  .button-tooltip {
+    margin: auto 0;
+  }
+
 }
